@@ -2,6 +2,14 @@
 
 If you are upgrading from a release of TMDA < 0.56:
 
+* TMDA now sends outgoing mail via direct SMTP instead of with the
+  /usr/sbin/sendmail program.  By default it will use the standard
+  SMTP port (25) on the local host.  You can modify this by setting
+  the "SMTPHOST" variable in your tmdarc.  See TMDA/Defaults.py for
+  further information.
+
+* tmdarc variable SENDMAIL has been renamed SENDMAIL_PROGRAM.
+
 * CRYPT_KEY should be removed from ~/.tmdarc or ~/.tmda/config.  Your
   secret key is now read from CRYPT_KEY_FILE, which defaults to
   ~/.tmda/crypt_key.  To make this conversion, move your existing
